--- a/ShopApp.WebUI/Views/Home/Index.cshtml
+++ b/ShopApp.WebUI/Views/Home/Index.cshtml
@@ -1,13 +1,8 @@
 ﻿@model ShopApp.WebUI.Models.ProductListModel
 
-
 <div class="row">
     <div class="col-md-3">
-        <ul class="list-group">
-            <li class="list-group-item">Telefon</li>
-            <li class="list-group-item">Bilgisayar</li>
-            <li class="list-group-item">Elektronik</li>
-        </ul>
+        @await Component.InvokeAsync("CategoryList")
     </div>
     <div class="col-md-9">
         <partial name="_slider" />
