--- a/ShopApp.WebUI/Views/Shared/_navbar.cshtml
+++ b/ShopApp.WebUI/Views/Shared/_navbar.cshtml
@@ -15,7 +15,7 @@
 				<a href="#" class="nav-link ">Orders</a>
 			</li>
 			<li class="nav-item">
-				<a href="#" class="nav-link ">Add Products</a>
+				<a asp-controller="Admin" asp-action="CreateProduct" class="nav-link ">Add Products</a>
 			</li>
 			<li class="nav-item">
 				<a href="#" class="nav-link ">Admin Products</a>
