--- a/ShopApp.WebUI/Views/Shop/List.cshtml
+++ b/ShopApp.WebUI/Views/Shop/List.cshtml
@@ -2,11 +2,7 @@
 
 <div class="row">
     <div class="col-md-3">
-        <ul class="list-group">
-            <li class="list-group-item">Telefon</li>
-            <li class="list-group-item">Bilgisayar</li>
-            <li class="list-group-item">Elektronik</li>
-        </ul>
+        @await Component.InvokeAsync("CategoryList")
     </div>
     <div class="col-md-9">
 
@@ -16,6 +12,7 @@
                 <partial name="_product" for="@product" />
             }
         </div>
+        <div page-model="@Model.PageModel"></div>
     </div>
 </div>
 
